# mineru-api

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.gpu  README.md  docker-compose.gpu.yml  docker-compose.yml  download_models.py  magic-pdf.gpu.json  magic-pdf.json  pyproject.toml
app/: __init__.py  main.py  office_converter.py  pdf.py
