[tool.poetry]
name = "mineru-api"
version = "0.1.0"
description = ""
authors = ["neka-nat <nekanat.stock@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
magic-pdf = {extras = ["full"], version = ">=0.9.2"}
hydra-core = "^1.3.2"
uvicorn = {extras = ["standard"], version = "^0.30.3"}
torchtext = "0.18.0"
timm = ">=0.9.16,<0.10.0"
albumentations = "^1.4.12"
gotenberg-client = "^0.6.0"
fastapi = "^0.111.1"
transformers = "4.42.4"
fairscale = "^0.4.13"
ftfy = "^6.2.0"
decord = "^0.6.0"
webdataset = "^0.2.86"
torch = "2.3.0"
numpy = "1.26.4"
iopath = ">=0.1.7,<0.1.10"
modelscope = "^1.16.1"

[[tool.poetry.source]]
name = "myhloli"
url = "https://wheels.myhloli.com"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
